@@ -1,3 +1,11 @@
+Wed Jun 27 19:07:49 UTC 2012  Marcel Smit  <msmit@remedy.nl>
+
+        * connectors/dds4ccm/tests/QueryCondition/Different/Sender/Different_Test_Sender.idl:
+        * connectors/dds4ccm/tests/QueryCondition/Different/Sender/Different_Test_Sender_exec.h:
+        * connectors/dds4ccm/tests/QueryCondition/Different/Sender/Different_Test_Sender_exec.cpp:
+        * connectors/dds4ccm/tests/QueryCondition/Different/descriptors/Plan.cdp:
+          Start the writing of samples upon a publication matched event.
+
 Wed Jun 27 14:17:56 UTC 2012  Marcel Smit  <msmit@remedy.nl>
 
         * connectors/dds4ccm/tests/Updater/Sender/Updater_Sender.idl:
